# GrainSegmentation

./: .gitignore  CHANGELOG.md  GrainSegmentation.code-workspace  README.md  plot_training_log.py  pyproject.toml  repack_tf.sh
.cursor/rules/: brief-conventional-commits.mdc  slurm-safe-execution.mdc  use-uv.mdc
.github/workflows/: release.yml
SLURM/: blend_PPX.sh  cc_vs_watershed.sh  crop_images.sh  download.sh  eval_yolo26x_seg.sh  evaluate_models_and_plot.sh  filter_tensorflow_stderr.py  gpkg_to_raster.sh  merge_multichannel_tiff.sh  patchify.sh  prepare_env.sh  raster_to_polygon.sh  split_overlaps.sh  split_test_val.sh  starting_masks.sh  submit_experiments.sh  submit_tune_watershed_variants.sh  submit_yolo_experiments.sh  train_unet_multi_input.sh  train_yolo26x_seg.sh  tune_watershed.sh
docs/plans/: 2026-03-05-project-reorganization-design.md  2026-03-05-project-reorganization-plan.md
pipelines/data_prep/: pyproject.toml
pipelines/training/: pyproject.toml
src/: convert_rle_polygon.py  downloadData.py  extract_rle_window.py  merge_overlapping_masks.py  process_rle_masks.py  run_sam2.py  train_unet_multi_input.py  version.py  visualize_rle.py
src/SLURM/: blend_PPX.sh  crop_images.sh  download.sh  gpkg_to_raster.sh  prepare_env.sh  preprocess_masks.sh  split_overlaps.sh  starting_masks.sh  submit_all_experiments.sh  submit_experiments.sh  train_unet_multi_input.sh
src/data_prep/: convert_rle_polygon.py  download_data.py  pyproject.toml  raster_to_polygon.py  split_tiff_channels.py  split_tiff_gpkg_to_yolo.py  stack_tiff_channels.py
src/data_prep/tests/: test_raster_to_polygon.py  test_split_tiff_channels.py  test_split_tiff_gpkg_to_yolo.py  test_stack_tiff_channels.py
src/evaluation/: coco_mask_ap.py  evaluate.py  inference.py  instance_masks.py  metrics.py  plot_results.py  plot_tuning_charts.py  pyproject.toml  tune_watershed.py  watershed_json_to_eval_args.py
src/pipeline/: convert_to_tiff.sh  download.sh  (+4 more)
src/training/: __init__.py  data.py  model.py  pyproject.toml  train.py  train_unet_multi_input.py
src/training/tests/: test_data.py  test_filter_tensorflow_stderr.py  test_slurm_scripts.py  test_train.py  test_train_unet_multi_input.py
src/yolo/: README.md  coco_instance_ap.py  config.py  evaluate.py  pipeline.py  pyproject.toml  train.py  visualize_dataset.py
src/yolo/tests/: test_coco_instance_ap.py  test_config.py  test_evaluate.py  test_pipeline.py  test_train.py  test_visualize_dataset.py
(+26 files in other folders)
