[project]
name = "data-prep-pipeline"
version = "0.1.0"
description = "Data preparation pipeline for GrainSegmentation"
requires-python = ">=3.12"
dependencies = [
    "gdown>=5.2.0",
    "sam-2",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
    "opencv-python>=4.12.0.88",
    "large-image>=1.33.5",
    "large-image-source-tiff>=1.33.5",
    "large-image-source-tifffile>=1.33.5",
    "tqdm>=4.67.1",
    "geopandas>=1.1.2",
    "pygeoops>=0.6.0",
    "rasterio>=1.5.0",
    "shapelysmooth>=0.2.1",
    "shared",
]

[tool.uv.sources]
sam-2 = { git = "https://github.com/facebookresearch/sam2.git" }
shared = { path = "../src" }
