[project]
name = "training-pipeline"
version = "0.1.0"
description = "Training pipeline for GrainSegmentation"
requires-python = "==3.12.*"
dependencies = [
    "matplotlib>=3.10.7",
    "keras-tuner>=1.4.8",
    "scipy>=1.17.1",
    "scikit-image>=0.25.0",
    "scikit-learn>=1.8.0",
    "tensorboard>=2.20.0",
    "setuptools==81.0.0",
]

[tool.uv.sources]
