[project]
name = "yolo"
version = "0.1.0"
description = "YOLO26 segmentation training pipeline for GrainSegmentation"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "geopandas>=1.0.0",
    "pycocotools>=2.0.8",
    "sahi>=0.11.21",
    "tifffile>=2024.12.12",
    "torchvision>=0.25.0",
    "ultralytics-opencv-headless>=8.4.21",
]
